; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-misc.c_pqSocketPoll.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-misc.c_pqSocketPoll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

@POLLERR = common dso_local global i32 0, align 4
@POLLIN = common dso_local global i32 0, align 4
@POLLOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i64)* @pqSocketPoll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pqSocketPoll(i32 %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.timeval, align 8
  %14 = alloca %struct.timeval*, align 8
  %15 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %4
  %19 = load i32, i32* %8, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %18
  store i32 0, i32* %5, align 4
  br label %62

22:                                               ; preds = %18, %4
  %23 = call i32 @FD_ZERO(i32* %10)
  %24 = call i32 @FD_ZERO(i32* %11)
  %25 = call i32 @FD_ZERO(i32* %12)
  %26 = load i32, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %22
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @FD_SET(i32 %29, i32* %10)
  br label %31

31:                                               ; preds = %28, %22
  %32 = load i32, i32* %8, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @FD_SET(i32 %35, i32* %11)
  br label %37

37:                                               ; preds = %34, %31
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @FD_SET(i32 %38, i32* %12)
  %40 = load i64, i64* %9, align 8
  %41 = icmp eq i64 %40, -1
  br i1 %41, label %42, label %43

42:                                               ; preds = %37
  store %struct.timeval* null, %struct.timeval** %14, align 8
  br label %57

43:                                               ; preds = %37
  %44 = call i64 @time(i32* null)
  store i64 %44, i64* %15, align 8
  %45 = load i64, i64* %9, align 8
  %46 = load i64, i64* %15, align 8
  %47 = icmp sgt i64 %45, %46
  br i1 %47, label %48, label %53

48:                                               ; preds = %43
  %49 = load i64, i64* %9, align 8
  %50 = load i64, i64* %15, align 8
  %51 = sub nsw i64 %49, %50
  %52 = getelementptr inbounds %struct.timeval, %struct.timeval* %13, i32 0, i32 1
  store i64 %51, i64* %52, align 8
  br label %55

53:                                               ; preds = %43
  %54 = getelementptr inbounds %struct.timeval, %struct.timeval* %13, i32 0, i32 1
  store i64 0, i64* %54, align 8
  br label %55

55:                                               ; preds = %53, %48
  %56 = getelementptr inbounds %struct.timeval, %struct.timeval* %13, i32 0, i32 0
  store i64 0, i64* %56, align 8
  store %struct.timeval* %13, %struct.timeval** %14, align 8
  br label %57

57:                                               ; preds = %55, %42
  %58 = load i32, i32* %6, align 4
  %59 = add nsw i32 %58, 1
  %60 = load %struct.timeval*, %struct.timeval** %14, align 8
  %61 = call i32 @select(i32 %59, i32* %10, i32* %11, i32* %12, %struct.timeval* %60)
  store i32 %61, i32* %5, align 4
  br label %62

62:                                               ; preds = %57, %21
  %63 = load i32, i32* %5, align 4
  ret i32 %63
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i64 @time(i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
